--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^19.0.1",
     "@rollup/plugin-node-resolve": "^13.0.2",
+    "eslint": "^7.32.0",
     "rollup": "^2.53.2",
     "rollup-plugin-terser": "^7.0.2"
   },
