--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "rollup -c --environment BUILD:production",
     "dev": "rollup -c -w",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "gh-pages": "gh-pages -d example"
+    "gh-pages": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
